--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kulim+Park:wght@200;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
